--- a/src/includes/head.html
+++ b/src/includes/head.html
@@ -29,4 +29,7 @@
 
 <!-- WebMention -->
 <link rel="webmention" href="https://webmention.io/xtexx.eu.org_indieauth/webmention" />
+
+<!-- Plausible -->
+<script defer data-domain="xtexx.eu.org" src="https://plausible.exozy.me/js/script.js"></script>
 {{end}}
