plausible: Fix xhtml

--- a/src/includes/head.html
+++ b/src/includes/head.html
@@ -31,5 +31,6 @@
 <link rel="webmention" href="https://webmention.io/xtexx.eu.org_indieauth/webmention" />
 
 <!-- Plausible -->
-<script defer data-domain="xtexx.eu.org" src="https://plausible.exozy.me/js/script.js"></script>
+<script defer="true" data-domain="xtexx.eu.org" src="https://plausible.exozy.me/js/script.js"></script>
+
 {{end}}
